--- a/packages/locale/package.json
+++ b/packages/locale/package.json
@@ -3,7 +3,6 @@
     "version": "0.0.1",
     "description": "astro-twikoo locale",
     "license":"MIT",
-    "main": "index.js",
-    "module": "index.js",
-    "types": "index.d.ts"
+    "main": "index.ts",
+    "module": "index.ts"
 }
