--- a/packages/locale/package.json
+++ b/packages/locale/package.json
@@ -4,5 +4,8 @@
     "description": "astro-twikoo locale",
     "license":"MIT",
     "main": "index.ts",
-    "module": "index.ts"
+    "module": "index.ts",
+    "scripts": {
+        "build":"tsup"
+    }
 }
